--- a/index.html
+++ b/index.html
@@ -176,25 +176,25 @@
         </div>
       </div>
     </banner>
+    <!-- scroll down arrow -->
+    <svg
+      xmlns="http://www.w3.org/2000/svg"
+      width="100"
+      height="100"
+      fill="currentColor"
+      class="bi bi-chevron-double-down banner_arrow"
+      viewBox="0 0 16 16"
+    >
+      <path
+        fill-rule="evenodd"
+        d="M1.646 6.646a.5.5 0 0 1 .708 0L8 12.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z"
+      />
+      <path
+        fill-rule="evenodd"
+        d="M1.646 2.646a.5.5 0 0 1 .708 0L8 8.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z"
+      />
+    </svg>
     <div class="container-xxl">
-      <!-- scroll down arrow -->
-      <svg
-        xmlns="http://www.w3.org/2000/svg"
-        width="100"
-        height="100"
-        fill="currentColor"
-        class="bi bi-chevron-double-down banner_arrow"
-        viewBox="0 0 16 16"
-      >
-        <path
-          fill-rule="evenodd"
-          d="M1.646 6.646a.5.5 0 0 1 .708 0L8 12.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z"
-        />
-        <path
-          fill-rule="evenodd"
-          d="M1.646 2.646a.5.5 0 0 1 .708 0L8 8.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z"
-        />
-      </svg>
       <!-- 募款 -->
       <!-- row 都加 flex-row 比較清楚~~~ -->
       <section
@@ -232,7 +232,7 @@
         ></a>
         <!--  -->
         <div class="col">
-          <div class="money w-100 animated_right">
+          <div class="money w-100 animated_left">
             <p class="fs-4 text-nbaBlue text-center text-lg-start">Service</p>
             <h2 class="text-center text-lg-start">
               EVERYBODY <br class="d-block d-lg-none" />
@@ -269,7 +269,7 @@
       </div>
       <!-- 目前的排版會感覺上下都沒有對齊，可先避免過多的水平間距調整 -->
       <section class="row row-cols-2 row-cols-lg-4 g-4">
-        <div class="col animated_right">
+        <div class="col animated_left">
           <div class="card w-100 position-relation newproduct_img">
             <div class="newproduct_cloth">
               <h6>Player</h6>
@@ -284,7 +284,7 @@
             />
           </div>
         </div>
-        <div class="col animated_right">
+        <div class="col animated_left">
           <div class="card w-100 position-relation newproduct_img">
             <div class="newproduct_cloth">
               <h6>Player</h6>
@@ -299,7 +299,7 @@
             />
           </div>
         </div>
-        <div class="col animated_right">
+        <div class="col animated_left">
           <div class="card w-100 position-relation newproduct_img">
             <div class="newproduct_cloth">
               <h6>Player</h6>
@@ -314,7 +314,7 @@
             />
           </div>
         </div>
-        <div class="col animated_right">
+        <div class="col animated_left">
           <div class="card w-100 position-relation newproduct_img">
             <div class="newproduct_cloth">
               <h6>Player</h6>
