新增：履歷連結

--- a/index.html
+++ b/index.html
@@ -233,7 +233,15 @@
         <!--  -->
         <div class="col">
           <div class="money w-100 animated_left">
-            <p class="fs-4 text-nbaBlue text-center text-lg-start">Service</p>
+            <a
+              href="https://docs.google.com/document/d/1nDsE6pbwxq5uskEAn2S5QXuNXQ6dNlr2/edit?usp=sharing&ouid=101148024216713455456&rtpof=true&sd=true"
+              class="text-decoration-none stretched-link"
+              data-bs-toggle="tooltip"
+              data-bs-placement="right"
+              title="Welcome invite for interviews !"
+            >
+              <p class="fs-4 text-nbaBlue text-center text-lg-start">Service</p>
+            </a>
             <h2 class="text-center text-lg-start">
               EVERYBODY <br class="d-block d-lg-none" />
               FUNDRAISING
