--- a/storyItem.html
+++ b/storyItem.html
@@ -138,7 +138,7 @@
                   <li>Number｜ 8, 24</li>
                 </ul>
               </div>
-              <p class="lh-lg fs-6 mb-5 fw-light">
+              <p class="lh-lg fs-6 mb-5 fw-light maxpad_p">
                 The all-time leading scorer in Lakers history, Bryant was the
                 first guard in NBA history to play 20 seasons. His 18 All-Star
                 designations are the second most all time, and he has the most
