新增：燈箱icon 增加提示

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
         ></button>
       </div>
       <div class="carousel-inner">
-        <div class="carousel-item active" data-bs-interval="2000">
+        <div class="carousel-item active" data-bs-interval="500">
           <!-- 拿掉寬高可以自適應 且不會有上下白邊 -->
           <!-- width="3000"
             height="810" -->
@@ -155,7 +155,7 @@
             allowfullscreen
           ></iframe>
         </div>
-        <div class="carousel-item" data-bs-interval="2000">
+        <div class="carousel-item" data-bs-interval="1000">
           <!-- 加寬度100%不錯位跑版 -->
           <img
             src="./nbaWeb/john-villablanca-_7EXgSQ98ew-unsplash.jpg"
@@ -165,7 +165,7 @@
             style="margin-top: 104px !important"
           />
         </div>
-        <div class="carousel-item" data-bs-interval="2000">
+        <div class="carousel-item" data-bs-interval="1000">
           <img
             src="./nbaWeb/dean-bennett-nFjLHE4vmn4-unsplash.jpg"
             class="d-block w-100 op-center of-cover"
@@ -214,6 +214,9 @@
               src="./nbaWeb/andre-hunter-RPKdvPcYAUo-unsplash.jpg"
               alt="義賣球衣"
             />
+            <i
+              class="fa-sharp fa-solid fa-images position-absolute top-0 end-0 m-2 fs-3 link-nbaBlue"
+            ></i>
             <div class="love_img_back"></div>
           </a>
         </div>
@@ -240,7 +243,11 @@
               data-bs-placement="right"
               title="Welcome invite for interviews !"
             >
-              <p class="fs-4 text-nbaBlue text-center text-lg-start">Service</p>
+              <p class="fs-4 text-nbaBlue text-center text-lg-start">
+                Service<i
+                  class="fa-solid fa-arrow-up-right-from-square ms-1"
+                ></i>
+              </p>
             </a>
             <h2 class="text-center text-lg-start">
               EVERYBODY <br class="d-block d-lg-none" />
