修正：小圖示RWD、輪播按鈕

--- a/customzied.html
+++ b/customzied.html
@@ -266,7 +266,7 @@
           alt=""
           height="150"
           width="150"
-          class="custom_img_after position-fixed bottom-0 end-0 me-5 active"
+          class="custom_img position-fixed bottom-0 end-0 me-5 active"
           data-bs-toggle="tooltip"
           data-bs-placement="top"
           title="Let's customized jersey !"
