--- a/index.html
+++ b/index.html
@@ -175,6 +175,32 @@
           />
         </div>
       </div>
+      <button
+        class="carousel-control-prev"
+        type="button"
+        data-bs-target="#carouselExampleIndicators"
+        data-bs-slide="prev"
+      >
+        <span
+          class="carousel-control-prev-icon"
+          style="width: 200px; height: 200px"
+          aria-hidden="true"
+        ></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button
+        class="carousel-control-next"
+        type="button"
+        data-bs-target="#carouselExampleIndicators"
+        data-bs-slide="next"
+      >
+        <span
+          class="carousel-control-next-icon"
+          style="width: 200px; height: 200px"
+          aria-hidden="true"
+        ></span>
+        <span class="visually-hidden">Next</span>
+      </button>
     </banner>
     <!-- scroll down arrow -->
     <svg
@@ -215,7 +241,7 @@
               alt="義賣球衣"
             />
             <i
-              class="fa-sharp fa-solid fa-images position-absolute top-0 end-0 m-2 fs-3 link-nbaBlue"
+              class="fa-solid fa-arrow-up-right-from-square position-absolute top-0 end-0 m-2 fs-3 link-dark"
             ></i>
             <div class="love_img_back"></div>
           </a>
@@ -244,9 +270,9 @@
               title="Welcome invite for interviews !"
             >
               <p class="fs-4 text-nbaBlue text-center text-lg-start">
-                Service<i
-                  class="fa-solid fa-arrow-up-right-from-square ms-1"
-                ></i>
+                Service
+                <i class="bi bi-link ms-1 fs-7 fw-bold"></i>
+                <i class="fa-brands fa-linkedin"></i>
               </p>
             </a>
             <h2 class="text-center text-lg-start">
@@ -485,7 +511,7 @@
           alt=""
           height="150"
           width="150"
-          class="custom_img_after position-fixed bottom-0 end-0 me-5"
+          class="custom_img position-fixed bottom-0 end-0 me-5"
           data-bs-toggle="tooltip"
           data-bs-placement="top"
           title="Let's customized jersey !"
