--- a/story.html
+++ b/story.html
@@ -309,7 +309,7 @@
           alt=""
           height="150"
           width="150"
-          class="custom_img_after position-fixed bottom-0 end-0 me-5"
+          class="custom_img position-fixed bottom-0 end-0 me-5"
           data-bs-toggle="tooltip"
           data-bs-placement="top"
           title="Let's customized jersey !"
