--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
             >
               <p class="fs-4 text-nbaBlue text-center text-lg-start">
                 Service
-                <i class="bi bi-link ms-1 fs-7 fw-bold"></i>
+                <i class="fa-solid fa-right-from-bracket ms-1"></i>
                 <i class="fa-brands fa-linkedin"></i>
               </p>
             </a>
