upgrade : home > index title

--- a/layout.html
+++ b/layout.html
@@ -15,7 +15,7 @@
   </head>
   <body>
     <div class="d-flex">
-      <aside class="sidebar vh-100 border-end d-flex flex-column bg-white ">
+      <aside class="sidebar vh-100 border-end d-flex flex-column bg-white">
         <!-- 1.名稱 -->
         <div class="p-4"><strong>六角西餐廳</strong> - 後台管理</div>
         <!-- 2.選單 -->
@@ -33,7 +33,9 @@
               data-bs-toggle="collapse"
             >
               <div class="d-flex justify-content-between px-4">
-                <p class="mb-0"><i class="bi bi-card-checklist"></i> 訂單管理</p>
+                <p class="mb-0">
+                  <i class="bi bi-card-checklist"></i> 訂單管理
+                </p>
                 <i class="bi bi-caret-down"></i>
               </div>
             </a>
@@ -47,13 +49,13 @@
             </div>
           </div>
           <div>
-            <a href="home.html" class="sidebar-link">
+            <a href="index.html" class="sidebar-link">
               <div class="px-4"><i class="bi bi-list-task"></i> 參考連結</div>
             </a>
           </div>
         </div>
         <!-- 3.登出 --><!-- 自動置底 -->
-        <a class="mt-auto sidebar-link " href="#">
+        <a class="mt-auto sidebar-link" href="#">
           <div class="px-4"><i class="bi bi-box-arrow-in-left"></i>登出</div>
         </a>
       </aside>
@@ -71,9 +73,6 @@
         </div>
 
         <!-- 內容 -->
-
-
-
       </main>
     </div>
     <!-- JavaScript Bundle with Popper -->
