--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             </div>
           </div>
           <div>
-            <a href="home.html" class="sidebar-link">
+            <a href="index.html" class="sidebar-link">
               <div class="px-4"><i class="bi bi-list-task"></i> 參考連結</div>
             </a>
           </div>
