--- a/orders.html
+++ b/orders.html
@@ -21,7 +21,7 @@
         <!-- 2.選單 -->
         <div class="overflow-auto mt-3">
           <div>
-            <a href="home.html" class="sidebar-link active">
+            <a href="index.html" class="sidebar-link active">
               <div class="px-4"><i class="bi bi-house-door"></i> 首頁</div>
             </a>
           </div>
@@ -48,7 +48,7 @@
             </div>
           </div>
           <div>
-            <a href="home.html" class="sidebar-link">
+            <a href="index.html" class="sidebar-link">
               <div class="px-4"><i class="bi bi-list-task"></i> 參考連結</div>
             </a>
           </div>
